# mqtt-ecc-client

./: .gitignore  CMakeLists.txt  Makefile  README.md
doc/: Notes  Notes.md  flow.drawio  worklog.md
evaluation/: simplePlot.py
evaluation/messungen/plot_ecc_with_ACC/: ecc_with_ACC_Info_plots_total_average.txt
evaluation/messungen/plot_ecc_without_ACC/: ecc_without_ACC_Info_plots_total_average.txt
evaluation/messungen/plot_mqtt_without_TLS/: mqtt_without_TLS_Info_plots_total_average.txt
evaluation/messungen/plot_rsa_with_ACC/: rsa_with_ACC_Info_plots_total_average.txt
evaluation/messungen/plot_rsa_without_ACC/: rsa_without_ACC_Info_plots_total_average.txt
main/: CMakeLists.txt  app_main.c  component.mk  main.c  main.h  project.h  sleep.c  sleep.h  station_example_main.c  wifisecrets.h
main/ecc/: ecc_task.c  ecc_task.h
main/mqtt/: app_mqtt.c  mqttclient.c
main/wifi/: espping.c  repl.c  wifi.c  wifi.h  wifisecrets.h
src/mqtt/: mqttclient.c  mqttclient.h
src/wifi/: wifi.c
